Revision history for AstroScript

2019-06-18 - script ephemeris.pl replaced with planpos.pl.
             floating point error in tests fixed.
             Helpers module moved from 'lib' to 'script'
2019-06-20 - floating point error in test fixed

2019-08-10 - module for calculating rise, set and transit events with example
             script.
2020-12-20 - ability to use decimal lat/lon input

2020-12-21 - Lunar phases module and script

2020-12-26 - Solstices and Equinoxes 
             Aparent position of the Sun

2020-12-31 - Apparent positions of the objects, Planet interface changed
             Numerous bugfixes

2021-01-01 - Demo script for computing solstices / Equinoxes
             Utility modules renamed to avoid CPAN authorization issues

2021-01-05 - List::MoreUtils dependency added to build prerequisites

2021-01-09 - Routines for calculating rise/set/transit times rewritten. 
             Algorithms from J.Meeus book substituted with the alternatives,
             found in Montenbruck & Phleger's "Astronomy on the PC".
             Thanks to Tom Browder for testing and collaborating!   

2021-01-10 - Support of colorless output. Color schemes replaced with
             themes, responsible for output. 
2021-02-23 - Time zone parameter in rst_almanac.pl script, user locale auto-detection
             fixes (failed on some systems), documntation fixes
2021-03-08 - Bug fix in Rise/Set routines. On rare occasions hourly iteration could
             cross midnight and set time was missed. Documentation texts corrected, 
             thanks to Tom Browdy.  
2021-05-08 - Sidereal time: result reduced to proper range
2022-01-31 - Module for calculation time lunar phases rewritten in order to fix a 
             serious bug. Now we use a simpler but more reliable algorithm from 
             "Astronomy with Your PC" by Peter Duffett-Smith.