@@ -35,6 +35,10 @@ Revision history for AstroScript
              cross midnight and set time was missed. Documentation texts corrected, 
              thanks to Tom Browdy.  
 2021-05-08 - Sidereal time: result reduced to proper range
-2022-01-31 - Module for calculation time lunar phases rewritten in order to fix a 
-             serious bug. Now we use a simpler but more reliable algorithm from 
+2022-01-31 - Fixed a serious bug in lunar phases calculations. The module was totally 
+             rewritten. Now it uses a simpler but more reliable algorithm from 
              "Astronomy with Your PC" by Peter Duffett-Smith.
+2022-02-05 - New function for calculating lunar phase in Lunar module. Example script
+             "moon_almanac.pl". List of lunar phases constants extended with 
+             intermediate phases, like "Waxing Gibbous" and "Wanning Crescent".
+
